# learn_ros2

./: .gitignore
chapt2/: CMakeLists.txt.back  ros2_cpp_node.cpp  ros2_python_node.py  test_args.cpp
chapt3/: novel1.txt  novel2.txt  novel3.txt
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
chapt3/topic_practice_ws/src/status_publisher/: setup.py
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  (+1 more)
chapt3/topic_ws/src/demo_python_topic/: package.xml  setup.py
chapt4/chapt4_ws/src/chapt4_interfaces/: package.xml
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
chapt5/chapt5_ws/src/demo_python_tf/: package.xml  setup.py
cpp_tool_package/demo_cpp_pkg/: CMakeLists.txt
node_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
node_ws/src/demo_cpp_pkg/src/: learn_auto.cpp  learn_functional.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
node_ws/src/demo_python_pkg/: setup.py
node_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  writer_node.py
python_tool_package/demo_python_pkg/: package.xml  setup.py
python_tool_package/demo_python_pkg/demo_python_pkg/: python_node.py
(+18 files in other folders)
